# serializer version: 1
# name: test_entities[select.pilote_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'comfort',
        'eco',
        'antifrost',
        'standby',
        'boost',
        'setpoint',
        'comfort_plus',
        'eco_1',
        'eco_2',
        'auto',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.pilote_device',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'myneomitis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pilote',
    'unique_id': 'pilote1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[select.pilote_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pilote Device',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'comfort',
        'eco',
        'antifrost',
        'standby',
        'boost',
        'setpoint',
        'comfort_plus',
        'eco_1',
        'eco_2',
        'auto',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.pilote_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'comfort',
  })
# ---
# name: test_entities[select.relais_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'on',
        'off',
        'auto',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.relais_device',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'myneomitis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relais',
    'unique_id': 'relais1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[select.relais_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Relais Device',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'on',
        'off',
        'auto',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.relais_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[select.ufh_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'heating',
        'cooling',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.ufh_device',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'myneomitis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ufh',
    'unique_id': 'ufh1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[select.ufh_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'UFH Device',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'heating',
        'cooling',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.ufh_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heating',
  })
# ---
